<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.1.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd"
  root="true">
  <modelVersion>4.1.0</modelVersion>
  <groupId>dev.nullpointercoding</groupId>
  <artifactId>zdeatharcade</artifactId>
  <version>0.0.1</version>

  <name>zdeatharcade</name>
  <url>https://nullpointer-coding.dev</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>purpur</id>
      <url>https://repo.purpurmc.org/snapshots</url>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <repository>
      <id>codemc-repo</id>
      <url>https://repo.codemc.org/repository/maven-public/</url>
    </repository>
    <repository>
      <id>sk89q-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>chestshop-repo</id>
      <url>https://repo.minebench.de/</url>
    </repository>
    <repository>
      <id>dmulloy2-repo</id>
      <url>https://repo.dmulloy2.net/repository/public/</url>
    </repository>
    <repository>
      <id>codemc-creatorfromhell</id>
      <url>https://repo.codemc.io/repository/creatorfromhell/</url>
    </repository>
  </repositories>
<dependencies>
    <dependency>
        <groupId>net.milkbowl.vault</groupId>
        <artifactId>VaultUnlockedAPI</artifactId>
        <version>2.19</version><!-- Validate this is the most recent version from the CI -->
        <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.acrobot.chestshop</groupId>
      <artifactId>chestshop</artifactId>
      <version>3.12</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.21.0</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>6.1.0-M1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.purpurmc.purpur</groupId>
      <artifactId>purpur-api</artifactId>
      <version>1.21.11-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.luckperms</groupId>
      <artifactId>api</artifactId>
      <version>5.5</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.14</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.dmulloy2</groupId>
      <artifactId>ProtocolLib</artifactId>
      <version>5.4.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.12.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.decentsoftware-eu</groupId>
      <artifactId>decentholograms</artifactId>
      <version>2.9.9</version>
      <scope>provided</scope>
    </dependency>
<!-- Source: https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
<dependency>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>4.0.0-beta-4</version>
    <scope>compile</scope>
</dependency>
<!-- Source: https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
<dependency>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-resources-plugin</artifactId>
    <version>4.0.0-beta-1</version>
    <scope>compile</scope>
</dependency>
  </dependencies>

  <!-- Source: https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>4.0.0-beta-2</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.15.0</version>
          <configuration>
            <source>21</source>  <!-- or 21, etc. -->
            <target>21</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.5</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>4.0.0-beta-2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>4.0.0-beta-2</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M16</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>